Add social media to landing page, updated all buttons to gradient colors and prepared Team page to receive new data

--- a/ATuaVoz/src/index.css
+++ b/ATuaVoz/src/index.css
@@ -20,5 +20,7 @@
   --color-nav: #262626;
   --color-hero: #464646;
   --color-secondary: #ffffff;
-  --color-primary: #0000ff;
+  --color-warning: #0000ff;
+  --color-primary: #1fa4dd;
+
 }
